[gd_scene load_steps=31 format=3 uid="uid://c4toioe8pc0d"]

[ext_resource type="Script" uid="uid://dy7ko61x1jf0d" path="res://Scripts/Victoria.gd" id="1_nuy37"]
[ext_resource type="Texture2D" uid="uid://1ijf2kb0in76" path="res://Assets/Fondo.PNG" id="2_nuy37"]
[ext_resource type="Texture2D" uid="uid://df7utmfmxi1dl" path="res://Assets/Viejo.png" id="3_2f6sa"]
[ext_resource type="Texture2D" uid="uid://k0n20qiwt2f5" path="res://Assets/CS_Caminar.png" id="4_wlch2"]
[ext_resource type="Texture2D" uid="uid://cwepnkmm56xa3" path="res://Assets/CS_Personajes.png" id="5_ebxf6"]
[ext_resource type="Texture2D" uid="uid://cjhtufobwclht" path="res://Assets/Victory.png" id="6_2f6sa"]
[ext_resource type="Theme" uid="uid://c74jhe44mnc8u" path="res://Temas/UI.tres" id="6_c04n7"]

[sub_resource type="Animation" id="Animation_fl6nd"]
resource_name = "Intro"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Prota:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-100, 512), Vector2(176, 512)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Prota:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"Caminar", &"Idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OldMan:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1210, 496), Vector2(1000, 496)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ronda:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_q5ubt"]
resource_name = "Irse"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Prota:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(176, 512), Vector2(1250, 512)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Prota:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Caminar"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OldMan:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kcoml"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Prota:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-100, 512)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Prota:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OldMan:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1000, 496)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ronda:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Ronda:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("OldMan:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Ronda:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(280, 144)]
}

[sub_resource type="Animation" id="Animation_o0pga"]
resource_name = "Ronda1"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Prota:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(176, 512), Vector2(560, 512)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ronda:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 0.3),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ronda:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(300, 150), Vector2(300, 100)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Prota:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"Caminar", &"Victoria"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Ronda:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o0pga"]
_data = {
&"Intro": SubResource("Animation_fl6nd"),
&"Irse": SubResource("Animation_q5ubt"),
&"RESET": SubResource("Animation_kcoml"),
&"Ronda1": SubResource("Animation_o0pga")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_m1bio"]
atlas = ExtResource("3_2f6sa")
region = Rect2(0, 0, 10, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j2aa"]
atlas = ExtResource("3_2f6sa")
region = Rect2(10, 0, 10, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_iu0vo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1bio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j2aa")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_a5pd0"]
atlas = ExtResource("4_wlch2")
region = Rect2(0, 0, 13, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5ubt"]
atlas = ExtResource("4_wlch2")
region = Rect2(13, 0, 13, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbjfh"]
atlas = ExtResource("4_wlch2")
region = Rect2(26, 0, 13, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl6nd"]
atlas = ExtResource("4_wlch2")
region = Rect2(39, 0, 13, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcoml"]
atlas = ExtResource("4_wlch2")
region = Rect2(0, 23, 13, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0pga"]
atlas = ExtResource("4_wlch2")
region = Rect2(13, 23, 13, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_furlt"]
atlas = ExtResource("4_wlch2")
region = Rect2(26, 23, 13, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_lor7a"]
atlas = ExtResource("4_wlch2")
region = Rect2(39, 23, 13, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvrkf"]
atlas = ExtResource("5_ebxf6")
region = Rect2(2, 0, 13, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5ne2"]
atlas = ExtResource("5_ebxf6")
region = Rect2(15, 0, 13, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktpaq"]
atlas = ExtResource("5_ebxf6")
region = Rect2(28, 0, 13, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3rms"]
atlas = ExtResource("5_ebxf6")
region = Rect2(41, 0, 13, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlch2"]
atlas = ExtResource("6_2f6sa")
region = Rect2(0, 0, 12, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebxf6"]
atlas = ExtResource("6_2f6sa")
region = Rect2(12, 0, 15, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_qvrkf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5pd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5ubt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbjfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl6nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcoml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0pga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_furlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lor7a")
}],
"loop": true,
"name": &"Caminar",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvrkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5ne2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktpaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3rms")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlch2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebxf6")
}],
"loop": true,
"name": &"Victoria",
"speed": 3.0
}]

[node name="Juego" type="Node2D"]
script = ExtResource("1_nuy37")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o0pga")
}

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(576, 264)
scale = Vector2(11.6389, 11.6389)
texture = ExtResource("2_nuy37")

[node name="OldMan" type="AnimatedSprite2D" parent="."]
position = Vector2(1000, 496)
scale = Vector2(9.39117, 9.23503)
sprite_frames = SubResource("SpriteFrames_iu0vo")
frame_progress = 0.412464

[node name="Prota" type="AnimatedSprite2D" parent="."]
position = Vector2(-100, 512)
scale = Vector2(8.98537, 8.83597)
sprite_frames = SubResource("SpriteFrames_qvrkf")
animation = &"Idle"

[node name="Ronda" type="Label" parent="."]
visible = false
offset_left = 280.0
offset_top = 144.0
offset_right = 832.0
offset_bottom = 220.0
theme = ExtResource("6_c04n7")
theme_override_font_sizes/font_size = 75
text = "¡Has Ganado!"

[node name="Menu" type="Button" parent="."]
offset_left = 496.0
offset_top = 272.0
offset_right = 672.0
offset_bottom = 314.0
theme = ExtResource("6_c04n7")
text = "Volver al 
Menú"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
